# sicom

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: audio.rs  image.rs  main.rs  progress.rs  stats.rs  video.rs
