[package]
name = "sicom"
version = "0.1.0"
edition = "2024"
description = "SIGame pack compression utility for reducing .siq file sizes"
license = "MIT"
keywords = ["sigame", "compression", "zip", "media", "cli"]
categories = ["command-line-utilities", "multimedia", "compression"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
zip = "0.6"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
webp = "0.3"
indicatif = "0.17"
mp3lame-encoder = "0.1"
symphonia = { version = "0.5", features = ["all"] }
urlencoding = "2.1"
ffmpeg-sidecar = "2.0"
ffprobe = "0.4"
log = "0.4"
env_logger = "0.10"

[dependencies.tempfile]
version = "3.0"

[dev-dependencies]
